# nvidia-tray

./: .gitignore  PKGBUILD  README.md  README.zh-CN.md  com.github.anlorsp.nvidia-tray.policy  i18n.py  install.sh  io.github.anlorsp.nvidia-tray.policy  nvidia-tray.service  nvidia_eject_helper.py  nvidia_tray.py  pyproject.toml
locales/zh_CN/LC_MESSAGES/: nvidia-tray.mo  nvidia-tray.po
