[project]
name = "nvidia-tray"
version = "0.1.0"
description = "Linux tray application for ejecting NVIDIA GPU from PCI bus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyudev>=0.24.0",
    "pygobject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pygobject-stubs>=2.0.0",
]
